--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,9 @@
       "email": "xiaofangmoon@foxmail.com"
     }
   ],
-  "require": {},
+  "require": {
+    "php": ">=5.4.0"
+  },
   "autoload": {
     "psr-4": {
       "xiaofangmoon\\hello\\": "src/"
